--- a/test.html
+++ b/test.html
@@ -1,45 +1,15 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            margin: 0;
-            height: 100%;
-        }
-        .page {
-            bottom: 0;
-            height: 100%;
-            display: flex;
-        }
-        .side_menu {
-            bottom: 0;
-            width: 100px;
-            height: 100%;
-            background: red;
-        }
-    </style>
+
 </head>
+
 <body>
-<div class="page">
-    <div class="side_menu">
-        <div class="menu_item">
-            1
-        </div>
-        <div class="menu_item">
-            1
-        </div>
-        <div class="menu_item">
-            1
-        </div>
-    </div>
-    <div class="main_container">
-        hello world
-    </div>
-</div>
+<form action="test.php" method="post" enctype="multipart/form-data">
+    <input type="file" name="file">
+    <input type="submit">
+</form>
 </body>
+
 </html>
